Fix repo name to better descriptive title

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="Keep this less than ~500 characters.">
     <meta name="abstract" content="Keep this less than ~144 characters.">
     <meta name="rating" content="14 Years">
-    <meta property="og:image" content="https://www.memetemplate.com/memetemplate-fake-logo.png">
+    <meta property="og:image" content="https://www.memeboilerplate.com/memeboilerplate-fake-logo.png">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Favicon (https://realfavicongenerator.net/) -->
@@ -22,28 +22,28 @@
     <!-- Project CSS -->
     <link rel="stylesheet" href="./main.css">
 
-    <title>Meme Template | Home</title>
+    <title>Meme Boilerplate | Home</title>
   </head>
   <body>
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <h1>Meme Template</h1>
+          <h1>Meme Boilerplate</h1>
           <p>My HTML/CSS Boilerplate for my random meme website ideas.</p>
         </div>
       </div>
     </div>
     <footer class="container-fluid">
       <div class="row p-5 mt-5">
-        <div class="col-md-4 bl-1 mb-5">This fictional website is copyright © <a href="https://ianrandmckenzie.com" target="_blank">@ianrandmckenzie</a>, all rights reserved. Learn more about the intention of this website on <a href="https://github.com/ianrandmckenzie/www.memetemplate.com" target="_blank">the README of this project's source code on GitHub.</a><hr class="d-md-none"></div>
+        <div class="col-md-4 bl-1 mb-5">This fictional website is copyright © <a href="https://ianrandmckenzie.com" target="_blank">@ianrandmckenzie</a>, all rights reserved. Learn more about the intention of this website on <a href="https://github.com/ianrandmckenzie/www.memeboilerplate.com" target="_blank">the README of this project's source code on GitHub.</a><hr class="d-md-none"></div>
         <div class="col-md-4 bl-1 mb-5">Inspired by God, your mom, and bathroom stall graffiti.</a><hr class="d-md-none"></div>
         <div class="col-md-4 bl-1 mb-5">
           <div class="row">
             <div class="col-9 text-end">
-              <p>MemeTemplate.com: The tagline you always knew you needed, but thought possible.</p>
+              <p>memeboilerplate.com: The tagline you always knew you needed, but thought possible.</p>
             </div>
             <div class="col-3 text-start">
-              <img src="./memetemplate-fake-logo.png" class="img-fluid" style="max-height: 75px;">
+              <img src="./memeboilerplate-fake-logo.png" class="img-fluid" style="max-height: 75px;">
             </div>
           </div>
           <hr class="d-md-none">
